--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
- "name": "App",
+ "name": "Geoguess Master",
+ "short_name": "Geoguess Master",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
@@ -37,5 +38,9 @@
    "type": "image\/png",
    "density": "4.0"
   }
- ]
+ ],
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#071D3E",
 }
