--- a/public/manifest.json
+++ b/public/manifest.json
@@ -42,5 +42,5 @@
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#071D3E",
+  "theme_color": "#071D3E"
 }
