--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "firebase-admin": "^8.8.0",
     "firebase-functions": "^3.3.0",
     "firebase-tools": "^7.8.1",
-    "random-points-on-polygon": "0.0.4",
+    "random-position-in-polygon": "^1.0.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
