--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
