--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@turf/boolean-equal": "^6.0.1",
     "@turf/boolean-point-in-polygon": "^6.0.1",
+    "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
