--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-tools": "^7.8.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-i18n": "^8.18.2",
     "vue-router": "^3.1.3",
     "vuetify": "^2.0.0"
   },
