--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,11 @@
 [build]
-  command = "npm run build && cd functions && npm install"
+  command = "npm run build"
   publish = "dist"
+
+[template.environment]
+  VUE_APP_API_KEY = "YOUR_GOOGLE_MAPS_API_KEY"
+  VUE_APP_FIREBASE_API_KEY = "YOUR_FIREBASE_API_KEY"
+  VUE_APP_FIREBASE_PROJECT_ID = "VUE_APP_FIREBASE_PROJECT_ID"
+  VUE_APP_FIREBASE_MESSAGING_SENDER_ID = "VUE_APP_FIREBASE_MESSAGING_SENDER_ID"
+  VUE_APP_FIREBASE_APP_ID = "VUE_APP_FIREBASE_APP_ID"
+  VUE_APP_FIREBASE_MEASUREMENT_ID = "VUE_APP_FIREBASE_MEASUREMENT_ID"
