End Translation + History add Rank

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
- "name": "Geoguess Master",
- "short_name": "Geoguess Master",
+ "name": "Geoguess 2",
+ "short_name": "Geoguess 2",
  "icons": [
   {
    "src": "./img/icons/android-icon-36x36.png",
