--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "random-position-in-polygon": "^1.0.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.1.3",
     "vue2-google-maps": "^0.10.7",
