--- a/.github/workflows/update_mode.yml
+++ b/.github/workflows/update_mode.yml
@@ -7,12 +7,13 @@ on:
 
 jobs:
   checkTag:  
-    if: secret.DISABLE_CI_UPDATE != 'true'
+    if: ${{secret.DISABLE_CI_UPDATE}}  != 'true'
     runs-on: ubuntu-latest
     outputs:
       lastTag: ${{ steps.lastTag.outputs.test }}
       tagActual: ${{ steps.tagActual.outputs.test }}
     steps:
+     - uses: actions/checkout@v2
      - id: lastTag
        run: |
         curl "https://api.github.com/repos/GeoGuess/Geoguess/releases/latest" | grep -oP '(?<="tag_name": ")[^"]*'
@@ -24,7 +25,7 @@ jobs:
   update:
     runs-on: ubuntu-latest
     needs: checkTag
-    if:  secret.DISABLE_CI_UPDATE != 'true' || ${{ needs.checkTag.outputs.lastTag }}  != ${{ needs.checkTag.outputs.tagActual }}
+    if:  ${{secret.DISABLE_CI_UPDATE}}  != 'true' || ${{ needs.checkTag.outputs.lastTag }}  != ${{ needs.checkTag.outputs.tagActual }}
     steps:
       - uses: actions/checkout@v2
       - name: Test if new release
