--- a/.github/workflows/update_mode.yml
+++ b/.github/workflows/update_mode.yml
@@ -13,7 +13,7 @@ jobs:
     outputs:
       lastTag: ${{ steps.lastTag.outputs.test }}
       tagActual: ${{ steps.tagActual.outputs.test }}
-    if: ${{ secrets.DISABLE_CI_UPDATE }}  != 'true'
+    if: secrets.DISABLE_CI_UPDATE != 'true'
     steps:
      - uses: actions/checkout@v2
      - id: lastTag
@@ -27,7 +27,7 @@ jobs:
   update:
     runs-on: ubuntu-latest
     needs: checkTag
-    if:  ${{ secrets.DISABLE_CI_UPDATE }}  != 'true' || ${{ needs.checkTag.outputs.lastTag }}  != ${{ needs.checkTag.outputs.tagActual }}
+    if:  secrets.DISABLE_CI_UPDATE != 'true' || ${{ needs.checkTag.outputs.lastTag }}  != ${{ needs.checkTag.outputs.tagActual }}
     steps:
       - uses: actions/checkout@v2
       - name: Test if new release
