--- a/.github/workflows/update_mode.yml
+++ b/.github/workflows/update_mode.yml
@@ -7,13 +7,28 @@ on:
    - master
  schedule:
   - cron: "0 2 * * *" 
+
 jobs:
+  checkUpdateAllowed:
+    runs-on: ubuntu-latest
+    outputs:
+      ALLOWED: ${{ steps.vars.outputs.test }}   
+    steps: 
+      - id: vars 
+        run: |
+          if ["$DISABLE_CI_UPDATE" != 'true']; then
+             echo ::set-output name=ALLOWED::'true'
+          fi
+    env:
+     DISABLE_CI_UPDATE: ${{ secrets.DISABLE_CI_UPDATE }}
+  
+   
   checkTag:  
     runs-on: ubuntu-latest
+    if:  ${{ needs.checkUpdateAllowed.outputs.ALLOWED }}
     outputs:
       lastTag: ${{ steps.lastTag.outputs.test }}
       tagActual: ${{ steps.tagActual.outputs.test }}
-    if: secrets.DISABLE_CI_UPDATE != 'true'
     steps:
      - uses: actions/checkout@v2
      - id: lastTag
@@ -27,7 +42,7 @@ jobs:
   update:
     runs-on: ubuntu-latest
     needs: checkTag
-    if:  secrets.DISABLE_CI_UPDATE != 'true' || ${{ needs.checkTag.outputs.lastTag }}  != ${{ needs.checkTag.outputs.tagActual }}
+    if:  ${{ needs.checkUpdateAllowed.outputs.ALLOWED }}|| ${{ needs.checkTag.outputs.lastTag }}  != ${{ needs.checkTag.outputs.tagActual }}
     steps:
       - uses: actions/checkout@v2
       - name: Test if new release
