--- a/.github/workflows/update_mode.yml
+++ b/.github/workflows/update_mode.yml
@@ -13,15 +13,23 @@ jobs:
     runs-on: ubuntu-latest
     if:  ${{ contains(github.repository, 'GeoGuess/Geoguess')}}
     outputs:
-      lastTag: ${{ steps.lastTag.outputs.test }}
       tagActual: ${{ steps.tagActual.outputs.test }}
     steps:
      - uses: actions/checkout@v2
-     - id: lastTag
-       run: |
-        curl "https://api.github.com/repos/GeoGuess/Geoguess/releases/latest" | grep -oP '(?<="tag_name": ")[^"]*'
      - id: tagActual
        run: |
         cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]'
 
-
+  update:
+    runs-on: ubuntu-latest
+    needs: checkTag
+    if: ${{ contains(github.repository, 'GeoGuess/Geoguess')}} || ${{ needs.checkTag.outputs.lastTag }}  != ${{ needs.checkTag.outputs.tagActual }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Test if new release
+        run: |
+          echo ${{ needs.checkTag.outputs.tagActual }}
+      - name: GitHub Push
+        uses: ad-m/github-push-action@v0.5.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
