--- a/.github/workflows/update_mode.yml
+++ b/.github/workflows/update_mode.yml
@@ -13,12 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     if:  ${{ contains(github.repository, 'GeoGuess/Geoguess')}}
     outputs:
-      tagActual: ${{ steps.tagActual.outputs.test }}
+      tagActual: ${{ steps.tagActual.outputs.TAG }}
     steps:
      - uses: actions/checkout@v2
      - id: tagActual
        run: |
-        cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]'
+         VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')
+         echo ::set-output name=HAS_SECRET_TOKEN::${VERSION}
+         
 
   update:
     runs-on: ubuntu-latest
