--- a/.github/workflows/update_mode.yml
+++ b/.github/workflows/update_mode.yml
@@ -19,7 +19,7 @@ jobs:
      - id: tagActual
        run: |
          VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')
-         echo ::set-output name=HAS_SECRET_TOKEN::${VERSION}
+         echo ::set-output name=TAG::${VERSION}
          
 
   update:
@@ -31,7 +31,3 @@ jobs:
       - name: Test if new release
         run: |
           echo ${{ needs.checkTag.outputs.tagActual }}
-      - name: GitHub Push
-        uses: ad-m/github-push-action@v0.5.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
