--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Geoguess 2",
-  "short_name": "Geoguess 2",
+  "name": "Geoguess",
+  "short_name": "Geoguess",
   "icons": [
     {
       "src": "./img/icons/android-icon-36x36.png",
