--- a/package.json
+++ b/package.json
@@ -1,67 +1,68 @@
 {
-  "name": "geoguess-master",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "@turf/bbox": "^6.0.1",
-    "@turf/boolean-point-in-polygon": "^6.0.1",
-    "@turf/distance": "^6.0.1",
-    "@turf/helpers": "^6.1.4",
-    "axios": "^0.19.2",
-    "core-js": "^2.6.5",
-    "firebase": "^7.14.6",
-    "firebase-admin": "^8.8.0",
-    "firebase-functions": "^3.3.0",
-    "firebase-tools": "^7.8.1",
-    "random-position-in-polygon": "^1.0.2",
-    "register-service-worker": "^1.6.2",
-    "vue": "^2.6.10",
-    "vue-clipboard2": "^0.3.1",
-    "vue-i18n": "^8.18.2",
-    "vue-router": "^3.1.3",
-    "vue2-google-maps": "^0.10.7",
-    "vuetify": "^2.0.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-plugin-pwa": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.17.4",
-    "sass-loader": "^7.1.0",
-    "vue-cli-plugin-vuetify": "^0.6.3",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "geoguess-master",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "dependencies": {
+        "@turf/bbox": "^6.0.1",
+        "@turf/boolean-point-in-polygon": "^6.0.1",
+        "@turf/distance": "^6.0.1",
+        "@turf/helpers": "^6.1.4",
+        "axios": "^0.19.2",
+        "core-js": "^2.6.5",
+        "firebase": "^7.14.6",
+        "firebase-admin": "^8.8.0",
+        "firebase-functions": "^3.3.0",
+        "firebase-tools": "^7.8.1",
+        "random-position-in-polygon": "^1.0.2",
+        "register-service-worker": "^1.6.2",
+        "vue": "^2.6.10",
+        "vue-clipboard2": "^0.3.1",
+        "vue-i18n": "^8.18.2",
+        "vue-router": "^3.1.3",
+        "vue2-google-maps": "^0.10.7",
+        "vuetify": "^2.0.0"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^3.11.0",
+        "@vue/cli-plugin-eslint": "^3.11.0",
+        "@vue/cli-plugin-pwa": "^3.11.0",
+        "@vue/cli-service": "^3.11.0",
+        "babel-eslint": "^10.0.1",
+        "eslint": "^5.16.0",
+        "eslint-plugin-vue": "^5.0.0",
+        "prettier": "2.1.2",
+        "sass": "^1.17.4",
+        "sass-loader": "^7.1.0",
+        "vue-cli-plugin-vuetify": "^0.6.3",
+        "vue-template-compiler": "^2.6.10",
+        "vuetify-loader": "^1.2.2"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "rules": {},
+        "parserOptions": {
+            "parser": "babel-eslint"
+        }
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": {}
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions"
+    ]
 }
