--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "geoguess-master",
+  "name": "geoguess",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
