--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^5.0.0",
-    "react-is": "^16.13.1",
     "prettier": "2.1.2",
+    "react-is": "^16.13.1",
     "sass": "^1.26.11",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-vuetify": "^0.6.3",
