Feature/new home page (#48)
* Init new Home Page

* Footer

* Add Font

* Responsible

* eslint pretier

* fix font

* fix svg

* add test + modal About

* Add test

* fix snapshot

* artefact name

* ci lint

* Fix Label custom geojson

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules
 # local env files
 .env.local
 .env.*.local
+.env
 
 # Log files
 npm-debug.log*
@@ -22,3 +23,5 @@ yarn-error.log*
 
 # Local Netlify folder
 .netlify
+
+/coverage
