--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,22 +6,8 @@ on:
   pull_request:
     branches: [ master ]
 jobs:
-  linter:
-    name: Linter
-    runs-on: 'ubuntu-latest'
-    if:  ${{ contains(github.repository, 'GeoGuess/Geoguess')}}
-    steps:
-    - uses: actions/checkout@v1
-    - uses: actions/cache@v1
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-    - run: npm ci
-    - name: Linter
-      run: npm run lint
-  build:
+  integration:
+    if:  ${{ contains(github.repository, 'GeoGuess/Geoguess')}}    
     env:
       VUE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
       VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
@@ -29,23 +15,35 @@ jobs:
       VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
       VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
       VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
-    name: Build
-    runs-on: 'ubuntu-latest'
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node: [12]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
     - uses: actions/cache@v1
       with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-    - run: npm ci
+        path: ~/.npm          
+        key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles(format('{0}{1}', github.workspace, '/package-lock.json')) }}
+    - name: Install dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: npm ci
+
+    - name: Linter
+      run: npm run lint
+
+    - name: Run unit tests
+      run: npm run test:unit
+
+    - name: Code coverage
+      uses: codecov/codecov-action@v1
+
     - name: Build
       run: npm run build
+
     - name: Upload artifact
-      uses: actions/upload-artifact@v1.0.0
+      uses: actions/upload-artifact@v1
       with:
-        # Artifact name
-        name: build
-        # Directory containing files to upload
+        name: ${{ matrix.os }}-node-v${{ matrix.node }}-build
         path: dist
