--- a/package.json
+++ b/package.json
@@ -1,68 +1,57 @@
 {
-    "name": "geoguess-master",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
-    },
-    "dependencies": {
-        "@turf/bbox": "^6.0.1",
-        "@turf/boolean-point-in-polygon": "^6.0.1",
-        "@turf/distance": "^6.0.1",
-        "@turf/helpers": "^6.1.4",
-        "axios": "^0.19.2",
-        "core-js": "^2.6.5",
-        "firebase": "^7.14.6",
-        "firebase-admin": "^8.8.0",
-        "firebase-functions": "^3.3.0",
-        "firebase-tools": "^7.8.1",
-        "random-position-in-polygon": "^1.0.2",
-        "register-service-worker": "^1.6.2",
-        "vue": "^2.6.10",
-        "vue-clipboard2": "^0.3.1",
-        "vue-i18n": "^8.18.2",
-        "vue-router": "^3.1.3",
-        "vue2-google-maps": "^0.10.7",
-        "vuetify": "^2.0.0"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.11.0",
-        "@vue/cli-plugin-eslint": "^3.11.0",
-        "@vue/cli-plugin-pwa": "^3.11.0",
-        "@vue/cli-service": "^3.11.0",
-        "babel-eslint": "^10.0.1",
-        "eslint": "^5.16.0",
-        "eslint-plugin-vue": "^5.0.0",
-        "prettier": "2.1.2",
-        "sass": "^1.17.4",
-        "sass-loader": "^7.1.0",
-        "vue-cli-plugin-vuetify": "^0.6.3",
-        "vue-template-compiler": "^2.6.10",
-        "vuetify-loader": "^1.2.2"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "eslint:recommended"
-        ],
-        "rules": {},
-        "parserOptions": {
-            "parser": "babel-eslint"
-        }
-    },
-    "postcss": {
-        "plugins": {
-            "autoprefixer": {}
-        }
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions"
-    ]
+  "name": "geoguess",
+  "version": "0.1.0",
+  "license": "MIT",
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "@turf/bbox": "^6.0.1",
+    "@turf/boolean-point-in-polygon": "^6.0.1",
+    "@turf/distance": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
+    "axios": "^0.19.2",
+    "core-js": "^2.6.5",
+    "firebase": "^7.22.0",
+    "firebase-admin": "^8.13.0",
+    "firebase-functions": "^3.11.0",
+    "firebase-tools": "^7.16.2",
+    "random-position-in-polygon": "^1.0.2",
+    "register-service-worker": "^1.7.1",
+    "vue": "^2.6.12",
+    "vue-clipboard2": "^0.3.1",
+    "vue-i18n": "^8.21.1",
+    "vue-router": "^3.4.5",
+    "vue2-google-maps": "^0.10.7",
+    "vuetify": "^2.3.12"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-pwa": "^3.12.1",
+    "@vue/cli-plugin-unit-jest": "^4.5.6",
+    "@vue/cli-service": "^3.12.1",
+    "@vue/test-utils": "^1.0.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-vue": "^5.0.0",
+    "prettier": "2.1.2",
+    "react-is": "^16.13.1",
+    "sass": "^1.26.11",
+    "sass-loader": "^7.1.0",
+    "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
