--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "geoguess",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -31,7 +31,6 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.7",
     "@vue/cli-plugin-eslint": "^3.12.1",
     "@vue/cli-plugin-pwa": "^3.12.1",
     "@vue/cli-plugin-unit-jest": "^4.5.6",
@@ -54,6 +53,5 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ],
-  "license": "MIT"
+  ]
 }
