--- a/.github/workflows/teste2e.yml
+++ b/.github/workflows/teste2e.yml
@@ -1,4 +1,4 @@
-name: CI e2e
+name: e2e
 
 on:
   push:
@@ -16,17 +16,20 @@ jobs:
       - uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
         with:
-          record: true
           start: npm run serve
           wait-on: 'http://localhost:8080'
+          record: true
+        env:
+          # pass the Dashboard record key as an environment variable
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
           name: cypress-screenshots
-          path: cypress/screenshots
+          path: tests/e2e/screenshots
       # Test run video was always captured, so this action uses "always()" condition
       - uses: actions/upload-artifact@v1
         if: always()
         with:
           name: cypress-videos
-          path: cypress/videos
+          path: tests/e2e/videos
