--- a/.github/workflows/teste2e.yml
+++ b/.github/workflows/teste2e.yml
@@ -12,6 +12,11 @@ jobs:
     name: E2E on Chrome
     env:
       VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
+      VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
+      VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
+      VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
+      VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
+      VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
     steps:
       - uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
