--- a/.github/workflows/teste2e.yml
+++ b/.github/workflows/teste2e.yml
@@ -5,18 +5,23 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+env:
+  VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
+  VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
+  VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
+  VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
+  VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
+  VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
+
 jobs:
-  cypress-run:
-    runs-on: ubuntu-16.04
+  cypress-chrome:
     if:  ${{ contains(github.repository, 'GeoGuess/Geoguess')}}    
+    runs-on: ubuntu-16.04
     name: E2E on Chrome
-    env:
-      VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
-      VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
-      VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
-      VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
-      VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
-      VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2]
     steps:
       - uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
@@ -24,6 +29,9 @@ jobs:
           start: npm run serve
           wait-on: 'http://localhost:8080'
           record: true
+          parallel: true
+          group: 'Actions chrome'
+          browser: chrome
         env:
           # pass the Dashboard record key as an environment variable
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
@@ -38,3 +46,70 @@ jobs:
         with:
           name: cypress-videos
           path: tests/e2e/videos
+          
+  cypress-firefox:
+    if:  ${{ contains(github.repository, 'GeoGuess/Geoguess')}}    
+    runs-on: ubuntu-16.04
+    name: E2E on Firefox
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2]
+    container:
+      image: cypress/browsers:node12.16.1-chrome80-ff73
+      options: --user 1001
+    steps:
+      - uses: actions/checkout@v1
+      - uses: cypress-io/github-action@v2
+        with:
+          start: npm run serve
+          wait-on: 'http://localhost:8080'
+          record: true
+          parallel: true
+          group: 'Actions Firefox'
+          browser: firefox
+        env:
+          # pass the Dashboard record key as an environment variable
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: tests/e2e/screenshots
+      # Test run video was always captured, so this action uses "always()" condition
+      - uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-videos
+          path: tests/e2e/videos
+ 
+  cypress-edge:
+    runs-on: windows-latest
+    if:  ${{ contains(github.repository, 'GeoGuess/Geoguess')}}    
+    name: E2E on Edge
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2]
+    steps:
+      - uses: actions/checkout@v1
+      - uses: cypress-io/github-action@v2
+        with:
+          start: npm run serve
+          wait-on: 'http://localhost:8080'
+          record: true
+          parallel: true
+          group: 'Actions Edge'
+          browser: edge
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: tests/e2e/screenshots
+      - uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-videos
+          path: tests/e2e/videos  
