--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue-i18n": "^8.21.1",
     "vue-router": "^3.4.5",
     "vue2-google-maps": "^0.10.7",
-    "vuetify": "^2.3.12"
+    "vuetify": "^2.3.12",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
