codecov only on ubuntu

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
       run: npm run test:unit
 
     - name: Code coverage
+      if:  matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v1
 
     - name: Build
