--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: actions/cache@v1
+      id: cache
       with:
         path: ~/.npm          
         key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles(format('{0}{1}', github.workspace, '/package-lock.json')) }}
