feat: Cache geojson search

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "axios": "^0.19.2",
+    "axios-cache-adapter": "^2.5.0",
     "core-js": "^2.6.12",
     "firebase": "^7.24.0",
     "firebase-admin": "^8.13.0",
@@ -26,6 +27,7 @@
     "random-position-in-polygon": "^1.0.2",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
+    "vue-axios": "^3.2.0",
     "vue-clipboard2": "^0.3.1",
     "vue-i18n": "^8.22.2",
     "vue-router": "^3.4.9",
