--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,3 +48,33 @@ jobs:
       with:
         name: ${{ matrix.os }}-node-v${{ matrix.node }}-build
         path: dist
+
+  cypress-chrome:
+    needs: integration
+    env:
+      VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
+      VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
+      VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
+      VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
+      VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
+      VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
+    if:  ${{ contains(github.repository, 'GeoGuess/Geoguess')}}    
+    runs-on: ubuntu-16.04
+    name: E2E on Chrome
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2]
+    steps:
+      - uses: actions/checkout@v1
+      - uses: cypress-io/github-action@v2
+        with:
+          start: npm run serve
+          wait-on: 'http://localhost:8080'
+          record: true
+          parallel: true
+          group: 'Actions chrome'
+          browser: chrome
+        env:
+          # pass the Dashboard record key as an environment variable
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
