--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: src/lang/*.js
-    translation: src/lang/%two_letters_code%.js
+  - source: src/lang/locale/*.js
+    translation: src/lang/locale/%two_letters_code%.js
