--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,6 @@
   VUE_APP_FIREBASE_MESSAGING_SENDER_ID = "YOUR_FIREBASE_MESSAGING_SENDER_ID"
   VUE_APP_FIREBASE_APP_ID = "YOUR_FIREBASE_APP_ID"
   VUE_APP_FIREBASE_MEASUREMENT_ID = "YOUR_FIREBASE_MEASUREMENT_ID"
+
+[[plugins]]
+  package = "@netlify/plugin-functions-install-core"
