chore(manifest): color

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,7 @@
         "multiplayer-game",
         "street-view"
     ],
+    "orientation": "any",
     "shortcuts": [{
         "name": "Play",
         "url": "/street-view",
