--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "axios-cache-adapter": "^2.5.0",
     "core-js": "^2.6.12",
     "firebase": "^8.2.4",
-    "flag-icon-css": "^3.5.0",
     "gmap-vue": "^1.5.0",
     "i18n-iso-countries": "^6.4.0",
     "random-position-in-polygon": "^1.0.3",
@@ -27,6 +26,7 @@
     "vue": "^2.6.12",
     "vue-axios": "^3.2.0",
     "vue-clipboard2": "^0.3.1",
+    "vue-country-flag": "^2.0.3",
     "vue-i18n": "^8.22.2",
     "vue-router": "^3.4.9",
     "vuetify": "^2.4.0",
