--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,20 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/cache@v1
       id: cache
+      if: matrix.os != 'windows'
       with:
         path: ~/.npm          
         key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles('**/package-lock.json') }}
+    - name: Get npm cache directory
+      id: npm-cache
+      if: matrix.os == 'windows'
+      run: |
+        echo "::set-output name=dir::$(npm config get cache)"
+    - uses: actions/cache@v2
+      if: matrix.os == 'windows'
+      with:
+        path: ${{ steps.npm-cache.outputs.dir }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
       run: npm install
 
