--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,13 +23,13 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/cache@v1
       id: cache
-      if: matrix.os != 'windows'
+      if: matrix.os != 'windows-latest'
       with:
         path: ~/.npm          
         key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles('**/package-lock.json') }}
     - name: Get npm cache directory
       id: npm-cache
-      if: matrix.os == 'windows'
+      if: matrix.os == 'windows-latest'
       run: |
         echo "::set-output name=dir::$(npm config get cache)"
     - uses: actions/cache@v2
