--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,7 @@ jobs:
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
+          Get-ChildItem Env:
       - uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
         with:
