--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,92 +6,61 @@ on:
   pull_request:
 
 jobs:
-  # integration:
-  #   env:
-  #     VUE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
-  #     VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
-  #     VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
-  #     VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
-  #     VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
-  #     VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-latest, macos-latest, windows-latest]
-  #       node: [12]
-  #   runs-on: ${{ matrix.os }}
-  #   steps:
-  #   - uses: actions/checkout@v1
-  #   - uses: actions/cache@v1
-  #     id: cache
-  #     if: matrix.os != 'windows-latest'
-  #     with:
-  #       path: ~/.npm          
-  #       key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles('**/package-lock.json') }}
-  #   - name: Get npm cache directory
-  #     id: npm-cache
-  #     if: matrix.os == 'windows-latest'
-  #     run: |
-  #       echo "::set-output name=dir::$(npm config get cache)"
-  #   - uses: actions/cache@v2
-  #     if: matrix.os == 'windows'
-  #     with:
-  #       path: ${{ steps.npm-cache.outputs.dir }}
-  #       key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-  #   - name: Install dependencies
-  #     run: npm install
+  integration:
+    env:
+      VUE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
+      VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
+      VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
+      VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
+      VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
+      VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node: [12]
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/cache@v1
+      id: cache
+      if: matrix.os != 'windows-latest'
+      with:
+        path: ~/.npm          
+        key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles('**/package-lock.json') }}
+    - name: Get npm cache directory
+      id: npm-cache
+      if: matrix.os == 'windows-latest'
+      run: |
+        echo "::set-output name=dir::$(npm config get cache)"
+    - uses: actions/cache@v2
+      if: matrix.os == 'windows'
+      with:
+        path: ${{ steps.npm-cache.outputs.dir }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+    - name: Install dependencies
+      run: npm install
 
-  #   - name: Linter
-  #     run: npm run lint
+    - name: Linter
+      run: npm run lint
 
-  #   - name: Run unit tests
-  #     run: npm run test:unit
+    - name: Run unit tests
+      run: npm run test:unit
 
-  #   - name: Code coverage
-  #     if:  matrix.os == 'ubuntu-latest'
-  #     uses: codecov/codecov-action@v1
+    - name: Code coverage
+      if:  matrix.os == 'ubuntu-latest'
+      uses: codecov/codecov-action@v1
 
-  #   - name: Build
-  #     run: npm run build
+    - name: Build
+      run: npm run build
 
-  #   - name: Upload artifact
-  #     uses: actions/upload-artifact@v1
-  #     with:
-  #       name: ${{ matrix.os }}-node-v${{ matrix.node }}-build
-  #       path: dist
+    - name: Upload artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: ${{ matrix.os }}-node-v${{ matrix.node }}-build
+        path: dist
 
-  # cypress-chrome-firefox:
-  #   needs: integration
-  #   env:
-  #     VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
-  #     VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
-  #     VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
-  #     VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
-  #     VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
-  #     VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
-  #   runs-on: ubuntu-16.04
-  #   name: E2E on Ubuntu
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       containers: [1, 2, 3, 4]
-  #       browsers: [chrome, firefox]
-  #   steps:
-  #     - uses: actions/checkout@v1
-  #     - uses: cypress-io/github-action@v2
-  #       with:
-  #         start: npm run serve
-  #         wait-on: 'http://localhost:8080'
-  #         record: true
-  #         parallel: true
-  #         group: ${{matrix.browsers}}
-  #         tag: ${{ github.event_name }}
-  #         browser: ${{matrix.browsers}}
-  #       env:
-  #         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-  #         COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
-
-  cypress-edge:    
-    # needs: integration
+  cypress-chrome-firefox:
+    needs: integration
     env:
       VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
       VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
@@ -99,14 +68,48 @@ jobs:
       VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
       VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
       VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
-    name: E2E on Windows
+    runs-on: ubuntu-16.04
+    name: E2E on Ubuntu
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2, 3, 4]
+        browsers: [chrome, firefox]
+    steps:
+      - uses: actions/checkout@v1
+      - uses: cypress-io/github-action@v2
+        with:
+          start: npm run serve
+          wait-on: 'http://localhost:8080'
+          record: true
+          parallel: true
+          group: ${{matrix.browsers}}
+          tag: ${{ github.event_name }}
+          browser: ${{matrix.browsers}}
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
+
+  cypress-edge:    
+    needs: integration
+    env:
+      VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
+      VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
+      VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
+      VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
+      VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
+      VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
     runs-on: windows-latest
+    name: E2E on Windows
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2, 3, 4]
     steps:
       - name: Set git to use LF
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
-          Get-ChildItem Env:
       - uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
         with:
@@ -115,6 +118,7 @@ jobs:
           record: true
           browser: edge
           group: edge
+          parallel: true
           tag: ${{ github.event_name }}
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
