--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
   #     VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
   #   strategy:
   #     matrix:
-  #       os: [ubuntu-latest, macos-latest, windows-latest]
+  #       os: [ubuntu-latest] # , macos-latest, windows-latest
   #       node: [12]
   #   runs-on: ${{ matrix.os }}
   #   steps:
@@ -77,7 +77,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        containers: [1, 2, 3, 4]
+        containers: [1, 2, 3, 4, 5]
         browsers: [chrome, firefox]
     steps:
       - uses: actions/checkout@v1
@@ -108,7 +108,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        containers: [1, 2, 3, 4]
+        containers: [1, 2, 3, 4, 5]
     steps:
       - name: Set git to use LF
         run: |
