--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,7 @@
         "multiplayer-game",
         "street-view"
     ],
+    "orientation": "any",
     "shortcuts": [{
         "name": "Play",
         "url": "/street-view",
@@ -64,9 +65,30 @@
             "sizes": "192x192",
             "type": "image/png",
             "density": "4.0"
+        },
+        {
+            "src": "./img/icons/android-launchericon-512-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "density": "5.0"
         }
     ],
-    "start_url": "./index.html",
+    "file_handlers": [
+        {
+          "action": "/",
+          "accept": {
+            "application/vnd.geo+json": [".geojson",".json"],
+            "application/json": [".geojson"]
+          }
+        },
+        {
+          "action": "/history",
+          "accept": {
+            "application/json": [".geosave"]
+          }
+        }
+    ],
+    "start_url": "/?utm_source=pwa",
     "display": "standalone",
     "background_color": "#ded3af",
     "theme_color": "#468F69"
