--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "geoguess",
-  "version": "0.3.1",
+  "version": "0.5.0",
   "description": "GeoGuess is an open-source geography game with Google Map StreetView.",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
+    "test:e2e": "cypress run",
+    "cypress": "cypress",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -18,18 +19,15 @@
     "axios": "^0.21.1",
     "axios-cache-adapter": "^2.5.0",
     "core-js": "^2.6.12",
-    "firebase": "^7.24.0",
-    "firebase-admin": "^8.13.0",
-    "firebase-functions": "^3.13.0",
-    "firebase-tools": "^7.16.2",
-    "flag-icon-css": "^3.5.0",
+    "firebase": "^8.2.6",
     "gmap-vue": "^1.5.0",
     "i18n-iso-countries": "^6.4.0",
-    "random-position-in-polygon": "^1.0.2",
+    "random-position-in-polygon": "^1.0.3",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.0",
     "vue-clipboard2": "^0.3.1",
+    "vue-country-flag": "^2.0.3",
     "vue-i18n": "^8.22.2",
     "vue-router": "^3.4.9",
     "vuetify": "^2.4.0",
@@ -38,24 +36,24 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.9",
     "@vue/cli-plugin-eslint": "^3.12.1",
     "@vue/cli-plugin-pwa": "^3.12.1",
-    "@vue/cli-plugin-unit-jest": "^4.5.9",
-    "@vue/cli-service": "^3.12.1",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "@vue/test-utils": "^1.1.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "cypress": "^5.6.0",
+    "cypress": "^6.7.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-vue": "^5.0.0",
     "jest-google-maps-mock": "^1.0.3",
     "prettier": "2.1.2",
     "react-is": "^16.13.1",
     "sass": "^1.30.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0"
@@ -79,6 +77,6 @@
   "bugs": {
     "url": "https://github.com/GeoGuess/Geoguess/issues"
   },
-  "homepage": "hhttps://github.com/GeoGuess/Geoguess#readme",
+  "homepage": "https://github.com/GeoGuess/Geoguess#readme",
   "license": "MIT"
 }
